# nano-core

./: .env.example  .gitignore  README.md  alembic.ini  nano-core  nano-core.cmd  pyproject.toml  start-nano
.github/workflows/: ci.yml
.pytest-tmp/test_resolve_verify_command_de0/: pyproject.toml
app/: __init__.py  cli.py  config.py  duration.py  main.py
app/api/: chat.py  health.py  improvement_plans.py  memory.py  proactive.py  runtime.py  voice.py
app/assistant/: __init__.py  agent.py  agent_router.py  agent_rules.py  agent_types.py  answer_executor.py  capabilities.py  identity_context.py  llm_factory.py  orchestrator.py  pending.py  prompts.py  response_composer.py  response_guard.py  response_pipeline.py  response_polish.py  response_source.py  response_variation.py  result_summarizer.py  router.py  service.py  tool_executor.py  tool_runner.py
app/assistant/flows/: __init__.py  chat.py  direct_tool.py  github.py  note.py  note_direct.py  note_lookup.py  note_pending.py  planner.py  presence_gate.py  self_update.py  timer.py  wipe.py
app/assistant/rules/: __init__.py  intents.py  messages.py  parsing.py  timers.py  tools.py
app/health/: __init__.py  checks.py
app/intents/: __init__.py  self_improve.py
app/llm/: client.py  protocol.py  schemas.py
app/memory/: __init__.py  codebase_index.py  db.py  improvement_plans.py  internal_note_service.py  internal_notes.py  models.py  repository.py
app/proactive/: __init__.py  background_tick.py  codebase_crawl.py  codebase_examine.py  codebase_files.py  registry.py  store.py  types.py
app/proactive/deliveries/: self_improvement.py
app/runtime/: __init__.py  activity.py  dev.py  long_task_progress.py  status_copy.py  user_activity.py
app/scheduler/: jobs.py
app/tools/: __init__.py  base.py  errors.py  file_tools.py  files.py  git_command.py  git_github.py  git_ops.py  github_ops.py  github_tools.py  health_tools.py  home.py  improvement_plan_service.py  internal_note_tools.py  note_tools.py  notes.py  pr_naming.py  pr_service.py  pr_verify.py  registry.py  reminder_tools.py  reminders.py  self_improve_planning.py  self_improve_service.py  self_improve_tools.py  self_improve_worktree.py  self_update_service.py  self_update_tools.py  timer_tools.py  workspace_context.py
app/voice/: __init__.py  service.py  volume.py
app/web/: __init__.py  home.py  tool_commands.py
app/web/static/: essence_visualizer.js  globe_visualizer.js  home-activity.js  home-chat.js  home-components.css  home-layout.css  home-plans.js  home-state.js  home-ui.js  home.css  (+2 more)
docs/: README.md
migrations/: README.md  env.py
tests/: conftest.py  test_activity.py  test_agent.py  test_agent_github.py  test_agent_health.py  test_agent_notes.py  test_agent_planner.py  test_agent_routing.py  test_agent_self_improve.py  test_agent_timers.py  test_agent_wipe.py  test_assistant_service.py  test_background_tick.py  test_capabilities.py  test_cli.py  test_codebase_crawl.py  test_codebase_examine.py  test_codebase_files.py  test_codebase_index.py  test_duration.py  test_file_tools.py  test_git_github.py  test_github_tools.py  test_health.py  test_home.py  test_identity_context.py  test_improvement_plan_service.py  test_improvement_plans_api.py  test_internal_note_access.py  test_internal_notes.py  test_llm_client.py  test_long_task_progress.py  test_memory_api.py  test_parsing.py  test_pr_naming.py  test_pr_service.py  test_pr_verify.py  test_presence_gate.py  test_proactive_api.py  test_reminder_tools.py  (+14 more)
tests/helpers/: agent_fixtures.py
(+1 files in other folders)
